Removing old kAFL submodule Adding internally patched kafl submodule
patched submodule update.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "dependencies/kAFL"]
 	path = dependencies/kAFL
-	url = https://github.com/IntelLabs/kAFL.git
+	url = git@github.com:Broly498/kAFL.git
 	branch = legacy
